initialized post recommendations