@@ -6,7 +6,8 @@ import com.beconnected.model.Post;
 import com.beconnected.model.User;
 import com.beconnected.repository.*;
 import com.beconnected.utilities.MatrixFactorization;
-import org.apache.commons.text.similarity.LevenshteinDistance;
+import com.beconnected.utilities.PostScorePair;
+import org.apache.commons.text.similarity.CosineSimilarity;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
@@ -37,6 +38,9 @@ public class PostService {
     @Autowired
     private UserRepository userRepository;
 
+    @Autowired
+    private ConnectionService connectionService;
+
     public Post createPost(String textContent, byte[] mediaContent, String mediaType, User author) {
         Post post = new Post(textContent, mediaContent, mediaType, author);
         return postRepository.save(post);
@@ -60,17 +64,20 @@ public class PostService {
         return comments.stream().map(Comment::getPost).distinct().collect(Collectors.toList());
     }
 
-    public List<Post> getFeedForUser(List<Long> userIds) {
-        if (userIds == null || userIds.isEmpty()) {
-            return new ArrayList<>();
-        }
+    public List<Post> getFeedForUser(User user) {
+        List<User> connections = connectionService.getConnections(user);
 
-        List<Post> authoredPosts = postRepository.findByAuthorInOrderByCreatedAtDesc(userIds);
-        List<Post> likedPosts = likeRepository.findByUserUserIdIn(userIds).stream()
+        List<Long> authorIds = connections.stream()
+                .map(User::getUserId)
+                .collect(Collectors.toList());
+        authorIds.add(user.getUserId());
+
+        List<Post> authoredPosts = postRepository.findByAuthorInOrderByCreatedAtDesc(authorIds);
+        List<Post> likedPosts = likeRepository.findByUserUserIdIn(authorIds).stream()
                 .map(Like::getPost)
                 .distinct()
                 .toList();
-        List<Post> commentedPosts = commentRepository.findByUserUserIdIn(userIds).stream()
+        List<Post> commentedPosts = commentRepository.findByUserUserIdIn(authorIds).stream()
                 .map(Comment::getPost)
                 .distinct()
                 .toList();
@@ -80,19 +87,7 @@ public class PostService {
         combinedPosts.addAll(likedPosts);
         combinedPosts.addAll(commentedPosts);
 
-        return combinedPosts.stream()
-                .sorted(Comparator.comparing(Post::getCreatedAt).reversed())
-                .collect(Collectors.toList());
-
-//        List<Post> recommendedPosts = new ArrayList<>();
-//        for (Long userId : userIds) {
-//            userRepository.findById(userId).ifPresent(user -> recommendedPosts.addAll(recommendPosts(user)));
-//        }
-//
-//        return recommendedPosts.stream()
-//                .filter(combinedPosts::contains)
-//                .distinct()
-//                .collect(Collectors.toList());
+        return recommendPostsForUser(user, combinedPosts.stream().distinct().toList());
     }
 
     public void addComment(Long postId, String commentText, User user) {
@@ -162,86 +157,60 @@ public class PostService {
         postRepository.delete(post);
     }
 
-    public double calculateMatchScore(User user, Post post) {
-        Set<String> userSkills = user.getSkills().stream()
-                .filter(Objects::nonNull)
-                .map(String::toLowerCase)
-                .collect(Collectors.toSet());
+    private double calculateScore(User user, Post post) {
+        CosineSimilarity cosineSimilarity = new CosineSimilarity();
 
-        String userBio = (user.getBio() != null) ? user.getBio().toLowerCase() : "";
-        String postContent = (post.getTextContent() != null) ? post.getTextContent().toLowerCase() : "";
+        String userBio = user.getBio() != null ? user.getBio().toLowerCase() : "";
+        String userSkillsStr = String.join(" ", user.getSkills()).toLowerCase();
 
-        if ((userSkills.isEmpty() && userBio.isEmpty()) || postContent.isEmpty()) {
-            return 0.0;
-        }
+        String postText = post.getTextContent() != null ? post.getTextContent().toLowerCase() : "";
 
-        Set<String> termsToMatch = new HashSet<>(userSkills);
-        if (!userBio.isEmpty()) {
-            termsToMatch.add(userBio);
-        }
+        String[] userProfile = (userBio + " " + userSkillsStr).split("\\W+");
+        String[] postProfile = postText.split("\\W+");
 
-        double totalSimilarity = 0.0;
-        LevenshteinDistance levenshteinDistance = new LevenshteinDistance();
+        Map<CharSequence, Integer> userProfileMap = Arrays.stream(userProfile)
+                .collect(Collectors.toMap(word -> (CharSequence) word, word -> 1, Integer::sum));
+        Map<CharSequence, Integer> postProfileMap = Arrays.stream(postProfile)
+                .collect(Collectors.toMap(word -> (CharSequence) word, word -> 1, Integer::sum));
 
-        for (String term : termsToMatch) {
-            int distance = levenshteinDistance.apply(term, postContent);
-            int maxLength = Math.max(term.length(), postContent.length());
-            double similarity = 1.0 - ((double) distance / maxLength);
-            totalSimilarity += similarity;
-        }
-
-        return totalSimilarity / termsToMatch.size();
+        return cosineSimilarity.cosineSimilarity(userProfileMap, postProfileMap);
     }
 
-    public List<Post> recommendPosts(User user) {
-        List<Post> allPosts = postRepository.findAll();
-        List<Post> likedPosts = getPostsLikedByUser(user.getUserId());
-        List<Post> commentedPosts = getPostsCommentedByUser(user.getUserId());
+    public double[][] generateScoreMatrix(List<User> users, List<Post> posts) {
+        int numUsers = users.size();
+        int numPosts = posts.size();
+        double[][] scoreMatrix = new double[numUsers][numPosts];
 
-        Set<Post> interactedPosts = new HashSet<>();
-        interactedPosts.addAll(likedPosts);
-        interactedPosts.addAll(commentedPosts);
-
-        Map<Post, Double> postScores = new HashMap<>();
-        for (Post post : allPosts) {
-            double matchScore = calculateMatchScore(user, post);
-
-            if (interactedPosts.contains(post)) {
-                matchScore /= 2.0;
+        for (int i = 0; i < numUsers; i++) {
+            User user = users.get(i);
+            for (int j = 0; j < numPosts; j++) {
+                Post post = posts.get(j);
+                scoreMatrix[i][j] = calculateScore(user, post);
             }
-
-            postScores.put(post, matchScore);
-        }
-
-        double[][] scoreMatrix = buildScoreMatrix(user, allPosts);
-        double[][] recommendations = matrixFactorization.factorization(scoreMatrix, 1000);
-
-        for (int i = 0; i < recommendations[0].length; i++) {
-            Post post = allPosts.get(i);
-            double recommendationScore = recommendations[0][i];
-
-            recommendationScore = Math.min(Math.max(recommendationScore, 0.0), 1.0);
-            double adjustedScore = recommendationScore * 0.3 + 0.7 * postScores.getOrDefault(post, 0.0);
-            postScores.put(post, adjustedScore);
-            // System.out.println("post " + post.getPostId() + " score: " + adjustedScore);
-        }
-        // System.exit(0);
-
-        return postScores.entrySet().stream()
-                .sorted(Map.Entry.<Post, Double>comparingByValue().reversed())
-                .map(Map.Entry::getKey)
-                .collect(Collectors.toList());
-    }
-
-    private double[][] buildScoreMatrix(User user, List<Post> allPosts) {
-        int numPosts = allPosts.size();
-        double[][] scoreMatrix = new double[1][numPosts];
-
-        for (int i = 0; i < numPosts; i++) {
-            Post post = allPosts.get(i);
-            scoreMatrix[0][i] = calculateMatchScore(user, post);
         }
 
         return scoreMatrix;
+    }
+
+    public List<Post> recommendPostsForUser(User user, List<Post> feedPosts) {
+        List<User> users = List.of(user);
+
+        double[][] scoreMatrix = generateScoreMatrix(users, feedPosts);
+        double[][] predictedMatrix = matrixFactorization.factorization(scoreMatrix, 500);
+
+        int userIndex = 0;
+        List<PostScorePair> postScorePairs = new ArrayList<>();
+
+        for (int j = 0; j < feedPosts.size(); j++) {
+            postScorePairs.add(new PostScorePair(feedPosts.get(j), predictedMatrix[userIndex][j]));
+        }
+
+        postScorePairs.sort((a, b) -> Double.compare(b.getScore(), a.getScore()));
+
+        List<Post> recommendedPosts = postScorePairs.stream()
+                .map(PostScorePair::getPost)
+                .collect(Collectors.toList());
+
+        return recommendedPosts;
     }
 }
